# Eleven-Term

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS_COMPLETE.md  ALL_ITERATIONS_PROGRESS_2026.md  ANDROID_AGENT_INFO.md  ASSESSMENT_REPORT_ITERATION_1.md  CLAUDE_CODE_IMPLEMENTATION.md  CLAUDE_CODE_REENGINEERING_AUDIT.md  CODEBASE_SCAN_REPORT.md  COMPLETE_100_PERCENT.md  COMPLETION_REPORT.md  COMPREHENSIVE_STATUS_2026.md  CUSTOM_AGENTS_SETUP.md  ELEVEN.md  EXECUTION_SUMMARY.md  FINAL_100_PERCENT_COMPLETION.md  FINAL_COMPLETION_VERIFIED.md  FINAL_SCAN_REPORT.md  FINAL_STATUS_2026.md  FIND_ENDPOINTS.md  GROKCODE_INTEGRATION_COMPLETE.md  GROK_CODE_INTEGRATION.md  GROK_CODE_INTEGRATION_COMPLETE.md  IMPROVEMENT_PLAN_ITERATION_1.md  INTEGRATION_COMPLETE.md  ISSUES_FIXED.md  ITERATION_1A_SUMMARY.md  ITERATION_1_ASSESSMENT_2026.md  ITERATION_1_EXECUTION_SUMMARY_2026.md  ITERATION_1_FINAL_REPORT.md  ITERATION_1_FINAL_SUMMARY_2026.md  ITERATION_1_PLAN_2026.md  ITERATION_1_PLAN_CRITIQUE_2026.md  ITERATION_1_REEVALUATION_2026.md  ITERATION_2_SUMMARY_2026.md  ITERATION_3_SUMMARY_2026.md  LAUNCH_INSTRUCTIONS.md  Makefile  OPTIMIZATION_COMPLETION_REPORT.md  (+70 more)
.github/workflows/: ci.yml  release.yml
scripts/: generate_performance_report.py
tests/: __init__.py  conftest.py  test_agent_chaining.py  test_async_file_utils.py  test_cache.py  test_coverage_100.py  test_grok_agent.py  test_integration.py  test_main_comprehensive.py  test_multimodal_utils.py  test_plugin_system.py  test_security_utils.py  test_validation_utils.py
tests/benchmarks/: __init__.py  test_api_latency.py  test_startup_time.py
